--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1135,3 +1135,7 @@ div.review {
 .margin-bottom-three {
     margin-bottom: 3px !important;
 }
+
+.padding-top-five{
+    padding-top: 7px;
+}
